openSAFETY: Changes for better dissection of additional SADR and SN Fail messages
This issue was migrated from bug 9345 in our old bug tracker.
Original bug information:
Reporter: Roland Knall
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: All
Platform: x86
Version: 1.11.x (Experimental)
Attachments:
slx_hochlauf_parametrierung.pcap: openSAFETY: Trace for additional parameter set upload and assign additional saddr
wireshark_opensafety_v2.16.patch: openSAFETY: Better dissection and fix for #9323 change
wireshark_opensafety_v2.16a.patch: openSAFETY: Better dissection and fix for #9323 change
wireshark_opensafety_v2.16b.patch: openSAFETY: Changes for better dissection of additional SADR and SN Fail messages