From Roland Knall via https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=9345

openSAFETY: Changes for better dissection of additional SADR and SN Fail
messages

svn path=/trunk/; revision=52998